<resources>
    <string name="app_name">发现日报</string>

    <string name="splash_text">每天三次，每次七分钟</string>
    <string name="menu_login">请登录</string>
    <string name="menu_mine_coll">我的收藏</string>
    <string name="menu_offline_download">离线下载</string>
    <string name="menu_index">首页</string>
    <string name="today_hot_new">今日热闻</string>
    <string name="editor_in_chief">主编</string>
    <string name="write_comment_tip">不友善评论会被删除，深度讨论会被有限展示</string>
    <string name="share">分享</string>
    <string name="share_from">来自「发现日报」的分享:</string>
    <string name="about_app">发现日报，每天三次，每次七分钟，灵感来自知乎日报.</string>
    <string name="about_function_list">* 首页最新消息\n* 主题日报新闻\n* 新闻详情\n* 评论查看\n* 收藏与取消收藏\n* 文章分享\n* 主编主页</string>
    <string name="about_open_source_libraries_list">
       com.squareup.okhttp3:okhttp:3.2.0
        \n\nio.reactivex:rxandroid:1.1.0
        \n\nio.reactivex:rxjava:1.1.0
        \n\ncom.trello:rxlifecycle-components:0.6.1
        \n\ncom.squareup.retrofit2:retrofit:2.0.0-beta4
        \n\ncom.github.bumptech.glide:glide:3.7.0
        \n\ncom.google.code.gson:gson:2.6.2
        \n\norg.byteam.superadapter:superadapter:3.6.5
        \n\ncom.bigkoo:convenientbanner:2.0.5
        \n\ncom.flyco.tablayout:FlycoTabLayout_Lib:2.0.0@aar
        \n\nio.realm:realm-gradle-plugin:2.0.2
    </string>
</resources>
