<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="130dp"
                android:background="@color/colorPrimary"
                android:orientation="vertical">

    <ImageView
        android:id="@+id/user_head_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/activity_vertical_margin"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:src="@drawable/menu_avatar"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/user_head_view"
        android:layout_marginLeft="@dimen/activity_vertical_margin"
        android:layout_marginTop="12dp"
        android:layout_toRightOf="@+id/user_head_view"
        android:text="@string/menu_login"
        android:textColor="@color/white"
        android:textSize="@dimen/default_big_text_size"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal"
        android:padding="@dimen/activity_horizontal_margin">

        <TextView
            android:id="@+id/collect_view"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawableLeft="@drawable/favorites"
            android:gravity="center"
            android:text="@string/menu_mine_coll"
            android:textColor="@color/white"
            android:textSize="@dimen/default_small_text_size"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawableLeft="@drawable/download"
            android:gravity="center"
            android:text="@string/menu_offline_download"
            android:textColor="@color/white"
            android:textSize="@dimen/default_small_text_size"/>
    </LinearLayout>

</RelativeLayout>